--- a/project 1/index.html
+++ b/project 1/index.html
@@ -37,7 +37,7 @@
                 <button id="attack" v-on:click="attack()">ATTACK</button>
                 <button id="special-attack" v-on:click="attack(MAXIMUM_SPECIAL_DAMAGE)">SPECIAL ATTACK</button>
                 <button id="heal" @click="heal">HEAL</button>
-                <button id="give-up" @click="startNewGame">GIVE UP</button>
+                <button id="give-up" @click="reset">GIVE UP</button>
             </div>
         </section>
         <section class="row log">
